# AOC24

./: CMakeLists.txt  hello.cpp
01/: first.cpp
02/: second_pt2.cpp
03/: regex_test.cpp  third_pt2.cpp
04/: fourth.cpp  fourth_pt2.cpp
05/: fifth.cpp  fifth_pt2.cpp
09/: ninth.cpp
1/: first_pt2.cpp
10/: tenth.cpp
11/: eleventh.cpp
12/: twelfth.cpp  twelfth_pt2.cpp
13/: thirteenth.cpp
14/: part1.cpp  part2.cpp
15/: part1.cpp  part2.cpp
16/: part1.cpp
17/: pt1.cpp
18/: s.cpp
19/: solution.cpp
2/: second.cpp
20/: solution.cpp
21/: solution.cpp
22/: sol.cpp
23/: sol.cpp
24/: solution.cpp
25/: solution.cpp
3/: third.cpp
6/: sixth.cpp  sixth_pt2.cpp
7/: seventh.cpp
8/: eights.cpp
