cmake_minimum_required(VERSION 3.30)
project(AOC24)

set(CMAKE_CXX_STANDARD 23)

add_executable(AOC24 hello.cpp)
add_executable(first 01/first.cpp)
add_executable(first_pt2 01/first_pt2.cpp)
add_executable(second 02/second.cpp)
add_executable(second_pt2 02/second_pt2.cpp)
add_executable(third 03/third.cpp)
add_executable(third_pt2 03/third_pt2.cpp)
add_executable(fourth 04/fourth.cpp)
add_executable(fourth_pt2 04/fourth_pt2.cpp)
add_executable(fifth 05/fifth.cpp)
add_executable(fifth_pt2 05/fifth_pt2.cpp)
add_executable(sixth 06/sixth.cpp)
add_executable(sixth_pt2 06/sixth_pt2.cpp)
add_executable(seventh 07/seventh.cpp)
add_executable(eights 08/eights.cpp)
add_executable(ninth 09/ninth.cpp)
add_executable(tenth 10/tenth.cpp)
add_executable(eleventh 11/eleventh.cpp)
add_executable(twelfth 12/twelfth.cpp)
add_executable(twelfth_pt2 12/twelfth_pt2.cpp)
add_executable(thirteenth 13/thirteenth.cpp)
add_executable(fourteen 14/part1.cpp)
add_executable(fourteen_pt2 14/part2.cpp)
add_executable(fifteen 15/part1.cpp)
add_executable(fifteen_pt2 15/part2.cpp)
add_executable(sixteen 16/part1.cpp)
add_executable(seventeen 17/pt1.cpp)
add_executable(eighteen 18/s.cpp)
add_executable(nineteen 19/solution.cpp)
add_executable(twenty 20/solution.cpp)
add_executable(twentyone 21/solution.cpp)
add_executable(twentythree 23/sol.cpp)
add_executable(twentytwo 22/sol.cpp)
add_executable(twentyfour 24/solution.cpp)
add_executable(final 25/solution.cpp)